// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packAnimal center option can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 43.20987654320988%;
        height: 43.20987654320988%;
        transform: translateX(-0.3571428571428453%) translateY(21.96428571428576%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.401234567901235,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.401234567901235,
      \\"e\\":-0.07716049382715795,
      \\"f\\":4.745370370370381
    }",
    "points": Array [
      Object {
        "x": -0.07716049382715764,
        "y": 4.74537037037038,
      },
      Object {
        "x": 26.929012345679013,
        "y": 4.74537037037038,
      },
      Object {
        "x": 13.42592592592594,
        "y": 31.751543209876548,
      },
    ],
    "rotate": -0,
    "scale": 5.401234567901235,
    "svgTransform": "matrix(5.401234567901235,0,0,5.401234567901235,-0.07716049382715795,4.745370370370381)",
    "translateX": -0.07716049382715795,
    "translateY": 4.745370370370381,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 30.864197530864203%;
        height: 38.58024691358025%;
        transform: translateX(199.4999999999999%) translateY(44.599999999999945%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.858024691358025,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.858024691358025,
      \\"e\\":30.787037037037024,
      \\"f\\":8.603395061728385
    }",
    "points": Array [
      Object {
        "x": 30.78703703703703,
        "y": 8.603395061728385,
      },
      Object {
        "x": 50.07716049382715,
        "y": 8.603395061728385,
      },
      Object {
        "x": 50.07716049382715,
        "y": 27.893518518518515,
      },
      Object {
        "x": 30.78703703703703,
        "y": 27.893518518518515,
      },
    ],
    "rotate": -0,
    "scale": 3.858024691358025,
    "svgTransform": "matrix(3.858024691358025,0,0,3.858024691358025,30.787037037037024,8.603395061728385)",
    "translateX": 30.787037037037024,
    "translateY": 8.603395061728385,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 54.012345679012356%;
        height: 54.012345679012356%;
        transform: translateX(49.7142857142856%) translateY(67.57142857142851%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.401234567901235,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.401234567901235,
      \\"e\\":13.425925925925895,
      \\"f\\":18.24845679012344
    }",
    "points": Array [
      Object {
        "x": 13.425925925925894,
        "y": 18.24845679012344,
      },
      Object {
        "x": 40.43209876543207,
        "y": 18.24845679012344,
      },
      Object {
        "x": 26.92901234567897,
        "y": 45.25462962962962,
      },
    ],
    "rotate": -0,
    "scale": 5.401234567901235,
    "svgTransform": "matrix(5.401234567901235,0,0,5.401234567901235,13.425925925925895,18.24845679012344)",
    "translateX": 13.425925925925895,
    "translateY": 18.24845679012344,
  },
]
`;

exports[`packAnimal it works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 54.012345679012356%;
        height: 43.20987654320988%;
        transform: translateX(-0.2857142857141973%) translateY(21.96428571428573%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.401234567901235,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.401234567901235,
      \\"e\\":-0.07716049382713663,
      \\"f\\":4.745370370370374
    }",
    "points": Array [
      Object {
        "x": -0.07716049382715612,
        "y": 4.745370370370375,
      },
      Object {
        "x": 26.92901234567902,
        "y": 4.745370370370375,
      },
      Object {
        "x": 13.42592592592593,
        "y": 31.751543209876534,
      },
    ],
    "rotate": -0,
    "scale": 5.401234567901235,
    "svgTransform": "matrix(5.401234567901235,0,0,5.401234567901235,-0.07716049382713663,4.745370370370374)",
    "translateX": -0.07716049382713663,
    "translateY": 4.745370370370374,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 30.864197530864203%;
        height: 30.864197530864203%;
        transform: translateX(199.49999999999994%) translateY(55.749999999999865%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.858024691358025,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.858024691358025,
      \\"e\\":30.78703703703703,
      \\"f\\":8.603395061728374
    }",
    "points": Array [
      Object {
        "x": 30.787037037037052,
        "y": 8.603395061728385,
      },
      Object {
        "x": 50.07716049382715,
        "y": 8.603395061728385,
      },
      Object {
        "x": 50.07716049382715,
        "y": 27.893518518518498,
      },
      Object {
        "x": 30.787037037037052,
        "y": 27.893518518518498,
      },
    ],
    "rotate": -0,
    "scale": 3.858024691358025,
    "svgTransform": "matrix(3.858024691358025,0,0,3.858024691358025,30.78703703703703,8.603395061728374)",
    "translateX": 30.78703703703703,
    "translateY": 8.603395061728374,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 54.012345679012356%;
        height: 54.012345679012356%;
        transform: translateX(49.71428571428581%) translateY(67.57142857142853%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.401234567901235,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.401234567901235,
      \\"e\\":13.425925925925952,
      \\"f\\":18.248456790123445
    }",
    "points": Array [
      Object {
        "x": 13.425925925925926,
        "y": 18.24845679012344,
      },
      Object {
        "x": 40.43209876543214,
        "y": 18.24845679012344,
      },
      Object {
        "x": 26.92901234567902,
        "y": 45.25462962962962,
      },
    ],
    "rotate": -0,
    "scale": 5.401234567901235,
    "svgTransform": "matrix(5.401234567901235,0,0,5.401234567901235,13.425925925925952,18.248456790123445)",
    "translateX": 13.425925925925952,
    "translateY": 18.248456790123445,
  },
]
`;

exports[`packAnimal it works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 100%;
        height: 100%;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":10,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":10,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 50,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 10,
    "svgTransform": "matrix(10,0,0,10,0,0)",
    "translateX": 0,
    "translateY": 0,
  },
]
`;

exports[`packAnimal jitter option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 5.911715065199311%;
        height: 5.911715065199311%;
        transform: translateX(-1.4817762764784712%) translateY(79.98059697364148%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.7389643831499139,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.7389643831499139,
      \\"e\\":-0.043799195684563585,
      \\"f\\":2.3641125002635537
    }",
    "points": Array [
      Object {
        "x": -0.043799195684563585,
        "y": 2.364112500263559,
      },
      Object {
        "x": 3.6510227200650016,
        "y": 2.364112500263559,
      },
      Object {
        "x": 1.8036117621902183,
        "y": 6.058934416013123,
      },
    ],
    "rotate": -0,
    "scale": 0.7389643831499139,
    "svgTransform": "matrix(0.7389643831499139,0,0,0.7389643831499139,-0.043799195684563585,2.3641125002635537)",
    "translateX": -0.043799195684563585,
    "translateY": 2.3641125002635537,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 6.683398167992673%;
        height: 5.346718534394138%;
        transform: translateX(1397.5555230376158%) translateY(797.1569399411442%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.6683398167992672,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.6683398167992672,
      \\"e\\":46.70210011168822,
      \\"f\\":21.31086892802115
    }",
    "points": Array [
      Object {
        "x": 46.70210011168822,
        "y": 21.31086892802115,
      },
      Object {
        "x": 50.04379919568456,
        "y": 21.31086892802115,
      },
      Object {
        "x": 50.04379919568456,
        "y": 24.652568012017483,
      },
      Object {
        "x": 46.70210011168822,
        "y": 24.652568012017483,
      },
    ],
    "rotate": -0,
    "scale": 0.6683398167992672,
    "svgTransform": "matrix(0.6683398167992672,0,0,0.6683398167992672,46.70210011168822,21.31086892802115)",
    "translateX": 46.70210011168822,
    "translateY": 21.31086892802115,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 7.42728092027177%;
        height: 7.42728092027177%;
        transform: translateX(73.96925263564009%) translateY(1182.727501789266%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.742728092027177,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.742728092027177,
      \\"e\\":2.74695209393726,
      \\"f\\":43.922247039600556
    }",
    "points": Array [
      Object {
        "x": 2.746952093937256,
        "y": 43.922247039600556,
      },
      Object {
        "x": 6.460592554073145,
        "y": 43.922247039600556,
      },
      Object {
        "x": 4.6037723240052,
        "y": 47.63588749973644,
      },
    ],
    "rotate": -0,
    "scale": 0.742728092027177,
    "svgTransform": "matrix(0.742728092027177,0,0,0.742728092027177,2.74695209393726,43.922247039600556)",
    "translateX": 2.74695209393726,
    "translateY": 43.922247039600556,
  },
]
`;

exports[`packAnimal jitter option works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 40.22988505747127%;
        height: 40.22988505747127%;
        transform: translateX(-0.4966504589795525%) translateY(42.46439513306057%) rotate(-7.0270532183349435deg)
      ",
    "matrix": "{
      \\"a\\":4.9909622755896645,
      \\"b\\":-0.6152053494866039,
      \\"c\\":0.6152053494866039,
      \\"d\\":4.9909622755896645,
      \\"e\\":-0.09990095439243873,
      \\"f\\":8.541688676190347
    }",
    "points": Array [
      Object {
        "x": -0.09990095439245654,
        "y": 8.541688676190349,
      },
      Object {
        "x": 24.854910423555857,
        "y": 5.465661928757333,
      },
      Object {
        "x": 15.453531482014714,
        "y": 31.958486680422148,
      },
    ],
    "rotate": -7.0270532183349435,
    "scale": 5.028735632183909,
    "svgTransform": "matrix(4.9909622755896645,-0.6152053494866039,0.6152053494866039,4.9909622755896645,-0.09990095439243873,8.541688676190347)",
    "translateX": -0.09990095439243873,
    "translateY": 8.541688676190347,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.735632183908045%;
        height: 35.91954022988505%;
        transform: translateX(229.6244725943568%) translateY(44.940737241764694%) rotate(17.717852219939214deg)
      ",
    "matrix": "{
      \\"a\\":3.4215758059831822,
      \\"b\\":1.0931389240045595,
      \\"c\\":-1.0931389240045595,
      \\"d\\":3.4215758059831822,
      \\"e\\":32.992021924476546,
      \\"f\\":8.071253096581302
    }",
    "points": Array [
      Object {
        "x": 32.99202192447657,
        "y": 8.07125309658132,
      },
      Object {
        "x": 50.09990095439247,
        "y": 13.53694771660411,
      },
      Object {
        "x": 44.63420633436967,
        "y": 30.644826746520025,
      },
      Object {
        "x": 27.526327304453776,
        "y": 25.17913212649723,
      },
    ],
    "rotate": 17.717852219939214,
    "scale": 3.591954022988505,
    "svgTransform": "matrix(3.4215758059831822,1.0931389240045595,-1.0931389240045595,3.4215758059831822,32.992021924476546,8.071253096581302)",
    "translateX": 32.992021924476546,
    "translateY": 8.071253096581302,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.287356321839084%;
        height: 50.287356321839084%;
        transform: translateX(49.89695220381012%) translateY(83.48204947116272%) rotate(-6.555986553430542deg)
      ",
    "matrix": "{
      \\"a\\":4.995851547461425,
      \\"b\\":-0.5741510028932981,
      \\"c\\":0.5741510028932981,
      \\"d\\":4.995851547461425,
      \\"e\\":12.545929074233868,
      \\"f\\":20.99045784116879
    }",
    "points": Array [
      Object {
        "x": 12.545929074233841,
        "y": 20.99045784116878,
      },
      Object {
        "x": 37.525186811541005,
        "y": 18.11970282670229,
      },
      Object {
        "x": 27.9063129573539,
        "y": 44.534338071242665,
      },
    ],
    "rotate": -6.555986553430542,
    "scale": 5.028735632183908,
    "svgTransform": "matrix(4.995851547461425,-0.5741510028932981,0.5741510028932981,4.995851547461425,12.545929074233868,20.99045784116879)",
    "translateX": 12.545929074233868,
    "translateY": 20.99045784116879,
  },
]
`;

exports[`packAnimal margin option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 52.22148541114059%;
        height: 41.77718832891247%;
        transform: translateX(-0.21957671957662886%) translateY(23.61772486772487%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.222148541114059,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.222148541114059,
      \\"e\\":-0.057333112289985166,
      \\"f\\":4.933410698496907
    }",
    "points": Array [
      Object {
        "x": -0.05733311229000401,
        "y": 4.933410698496907,
      },
      Object {
        "x": 26.053409593280293,
        "y": 4.933410698496907,
      },
      Object {
        "x": 12.99803824049514,
        "y": 31.044153404067185,
      },
    ],
    "rotate": -0,
    "scale": 5.222148541114059,
    "svgTransform": "matrix(5.222148541114059,0,0,5.222148541114059,-0.057333112289985166,4.933410698496907)",
    "translateX": -0.057333112289985166,
    "translateY": 4.933410698496907,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.84615384615385%;
        height: 28.84615384615385%;
        transform: translateX(222.06417624521063%) translateY(62.222222222222044%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.6057692307692313,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.6057692307692313,
      \\"e\\":32.02848695844385,
      \\"f\\":8.97435897435895
    }",
    "points": Array [
      Object {
        "x": 32.02848695844388,
        "y": 8.97435897435896,
      },
      Object {
        "x": 50.05733311229001,
        "y": 8.97435897435896,
      },
      Object {
        "x": 50.05733311229001,
        "y": 27.00320512820511,
      },
      Object {
        "x": 32.02848695844388,
        "y": 27.00320512820511,
      },
    ],
    "rotate": -0,
    "scale": 3.6057692307692313,
    "svgTransform": "matrix(3.6057692307692313,0,0,3.6057692307692313,32.02848695844385,8.97435897435895)",
    "translateX": 32.02848695844385,
    "translateY": 8.97435897435895,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 52.22148541114059%;
        height: 52.22148541114059%;
        transform: translateX(53.48412698412711%) translateY(72.59788359788357%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.222148541114059,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.222148541114059,
      \\"e\\":13.965102785145923,
      \\"f\\":18.955846595932798
    }",
    "points": Array [
      Object {
        "x": 13.9651027851459,
        "y": 18.955846595932794,
      },
      Object {
        "x": 40.07584549071623,
        "y": 18.955846595932794,
      },
      Object {
        "x": 27.020474137931053,
        "y": 45.06658930150309,
      },
    ],
    "rotate": -0,
    "scale": 5.222148541114059,
    "svgTransform": "matrix(5.222148541114059,0,0,5.222148541114059,13.965102785145923,18.955846595932798)",
    "translateX": 13.965102785145923,
    "translateY": 18.955846595932798,
  },
]
`;

exports[`packAnimal maximizing can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 9.333333333333334%;
        height: 9.333333333333334%;
        transform: translateX(482.1428571428572%) translateY(504.46428571428567%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":22.500000000000004,
      \\"f\\":23.541666666666668
    }",
    "points": Array [
      Object {
        "x": 22.500000000000004,
        "y": 23.541666666666668,
      },
      Object {
        "x": 28.333333333333336,
        "y": 23.541666666666668,
      },
      Object {
        "x": 25.41666666666667,
        "y": 29.375,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,22.500000000000004,23.541666666666668)",
    "translateX": 22.500000000000004,
    "translateY": 23.541666666666668,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 8.333333333333334%;
        height: 8.333333333333334%;
        transform: translateX(700.0000000000001%) translateY(585%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.8333333333333334,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.8333333333333334,
      \\"e\\":29.16666666666667,
      \\"f\\":24.375
    }",
    "points": Array [
      Object {
        "x": 29.16666666666667,
        "y": 24.375,
      },
      Object {
        "x": 33.333333333333336,
        "y": 24.375,
      },
      Object {
        "x": 33.333333333333336,
        "y": 28.541666666666668,
      },
      Object {
        "x": 29.16666666666667,
        "y": 28.541666666666668,
      },
    ],
    "rotate": -0,
    "scale": 0.8333333333333334,
    "svgTransform": "matrix(0.8333333333333334,0,0,0.8333333333333334,29.16666666666667,24.375)",
    "translateX": 29.16666666666667,
    "translateY": 24.375,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666668%;
        height: 11.666666666666668%;
        transform: translateX(435.7142857142858%) translateY(453.57142857142856%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":25.41666666666667,
      \\"f\\":26.458333333333336
    }",
    "points": Array [
      Object {
        "x": 25.41666666666667,
        "y": 26.458333333333336,
      },
      Object {
        "x": 31.250000000000007,
        "y": 26.458333333333336,
      },
      Object {
        "x": 28.333333333333336,
        "y": 32.29166666666667,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,25.41666666666667,26.458333333333336)",
    "translateX": 25.41666666666667,
    "translateY": 26.458333333333336,
  },
]
`;

exports[`packAnimal postPackPolygonScale option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 41.1764705882353%;
        height: 41.1764705882353%;
        transform: translateX(-1.5873015873014609%) translateY(24.20634920634923%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.147058823529412,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.147058823529412,
      \\"e\\":-0.326797385620889,
      \\"f\\":4.98366013071896
    }",
    "points": Array [
      Object {
        "x": -0.32679738562090765,
        "y": 4.983660130718959,
      },
      Object {
        "x": 25.408496732026144,
        "y": 4.983660130718959,
      },
      Object {
        "x": 12.540849673202619,
        "y": 30.718954248366003,
      },
    ],
    "rotate": -0,
    "scale": 5.147058823529412,
    "svgTransform": "matrix(5.147058823529412,0,0,5.147058823529412,-0.326797385620889,4.98366013071896)",
    "translateX": -0.326797385620889,
    "translateY": 4.98366013071896,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 29.411764705882355%;
        height: 29.411764705882355%;
        transform: translateX(217.22222222222217%) translateY(58.8888888888888%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.6764705882352944,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.6764705882352944,
      \\"e\\":31.94444444444444,
      \\"f\\":8.660130718954235
    }",
    "points": Array [
      Object {
        "x": 31.94444444444446,
        "y": 8.660130718954246,
      },
      Object {
        "x": 50.32679738562091,
        "y": 8.660130718954246,
      },
      Object {
        "x": 50.32679738562091,
        "y": 27.042483660130706,
      },
      Object {
        "x": 31.94444444444446,
        "y": 27.042483660130706,
      },
    ],
    "rotate": -0,
    "scale": 3.6764705882352944,
    "svgTransform": "matrix(3.6764705882352944,0,0,3.6764705882352944,31.94444444444444,8.660130718954235)",
    "translateX": 31.94444444444444,
    "translateY": 8.660130718954235,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 51.47058823529412%;
        height: 41.1764705882353%;
        transform: translateX(54.28571428571439%) translateY(93.65079365079364%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.147058823529412,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.147058823529412,
      \\"e\\":13.970588235294148,
      \\"f\\":19.28104575163399
    }",
    "points": Array [
      Object {
        "x": 13.970588235294123,
        "y": 19.281045751633986,
      },
      Object {
        "x": 39.70588235294121,
        "y": 19.281045751633986,
      },
      Object {
        "x": 26.838235294117652,
        "y": 45.01633986928103,
      },
    ],
    "rotate": -0,
    "scale": 5.147058823529412,
    "svgTransform": "matrix(5.147058823529412,0,0,5.147058823529412,13.970588235294148,19.28104575163399)",
    "translateX": 13.970588235294148,
    "translateY": 19.28104575163399,
  },
]
`;

exports[`packAnimal rotation can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 54.012345679012356%;
        height: 43.20987654320988%;
        transform: translateX(-0.2857142857141973%) translateY(21.96428571428573%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.401234567901235,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.401234567901235,
      \\"e\\":-0.07716049382713663,
      \\"f\\":4.745370370370374
    }",
    "points": Array [
      Object {
        "x": -0.07716049382715612,
        "y": 4.745370370370375,
      },
      Object {
        "x": 26.92901234567902,
        "y": 4.745370370370375,
      },
      Object {
        "x": 13.42592592592593,
        "y": 31.751543209876534,
      },
    ],
    "rotate": -0,
    "scale": 5.401234567901235,
    "svgTransform": "matrix(5.401234567901235,0,0,5.401234567901235,-0.07716049382713663,4.745370370370374)",
    "translateX": -0.07716049382713663,
    "translateY": 4.745370370370374,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 30.864197530864203%;
        height: 30.864197530864203%;
        transform: translateX(199.49999999999994%) translateY(55.749999999999865%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.858024691358025,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.858024691358025,
      \\"e\\":30.78703703703703,
      \\"f\\":8.603395061728374
    }",
    "points": Array [
      Object {
        "x": 30.787037037037052,
        "y": 8.603395061728385,
      },
      Object {
        "x": 50.07716049382715,
        "y": 8.603395061728385,
      },
      Object {
        "x": 50.07716049382715,
        "y": 27.893518518518498,
      },
      Object {
        "x": 30.787037037037052,
        "y": 27.893518518518498,
      },
    ],
    "rotate": -0,
    "scale": 3.858024691358025,
    "svgTransform": "matrix(3.858024691358025,0,0,3.858024691358025,30.78703703703703,8.603395061728374)",
    "translateX": 30.78703703703703,
    "translateY": 8.603395061728374,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 54.012345679012356%;
        height: 54.012345679012356%;
        transform: translateX(49.71428571428581%) translateY(67.57142857142853%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.401234567901235,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.401234567901235,
      \\"e\\":13.425925925925952,
      \\"f\\":18.248456790123445
    }",
    "points": Array [
      Object {
        "x": 13.425925925925926,
        "y": 18.24845679012344,
      },
      Object {
        "x": 40.43209876543214,
        "y": 18.24845679012344,
      },
      Object {
        "x": 26.92901234567902,
        "y": 45.25462962962962,
      },
    ],
    "rotate": -0,
    "scale": 5.401234567901235,
    "svgTransform": "matrix(5.401234567901235,0,0,5.401234567901235,13.425925925925952,18.248456790123445)",
    "translateX": 13.425925925925952,
    "translateY": 18.248456790123445,
  },
]
`;
